# CompileTimeLib

./: .gitignore  CMakeLists.txt  README.md  manage.py
include/algorithm/: sort.hpp
include/container/: static_set.hpp  static_vector.hpp
include/functional/: static_function.hpp
src/: main.cpp
tests/: static_function.cpp  static_set.cpp  static_vector.cpp
